Fixes error line sorting in GUI, adds warnings to CHAR on extra operands, adds N records to evaluate().

--- a/dox/user_guide.dox
+++ b/dox/user_guide.dox
@@ -912,7 +912,7 @@ The following tables describe the various instructions with their formats and th
 
 
 <table>
-<tr><th>Spec Key   </th><th colspan="2"> Instruction Name                                               </th><th> opcode </th><th> valid operand combos                                                                                                                                                           </th><th> special ranges                           </th><th> instruction format              </th><th> description                                                                                                                                                             </th></tr>
+<tr><th>Spec Key   </th><th colspan="2"> Instruction Name                                               </th><th> Opcode </th><th> Valid Operand Combos                                                                                                                                                           </th><th> Special Ranges                           </th><th> Instruction Formats Used        </th><th> Description                                                                                                                                                             </th></tr>
 <tr><td>MVO        </td><td> MOVD  </td><td>(<b>Mov</b>e <b>D</b>ata)                                   </td><td> 000000 </td><td> {FR,DM},{FM,DR},{FX,DM},{FM,DX},{FR,DM,DX},{FX,DM,DX},{FM,FX,DX},{FM,FX,DR},{FR,DR},{FR,DX},{FX,DR},{FX,DX},{FR,DM},{FL,DR},{FL,DX},{FM,DM},{FL,DM},{EX,DR},{EX,DX},{EX,DM}    </td><td> FL,EX:[-32768,32767]{DM,FL}:[-2048,2047] </td><td> mem,lit,mem + mem,mem + lit     </td><td> Moves data from a register to memory loc or memory loc to a register or register to register                                                                            </td></tr>
 <tr><td>MV1        </td><td> MOVDN </td><td>(<b>Mov</b>e <b>D</b>ata and <b>N</b>egate)                 </td><td> 000001 </td><td> {FR,DM},{FM,DR},{FX,DM},{FM,DX},{FR,DM,DX},{FX,DM,DX},{FM,FX,DX},{FM,FX,DR},{FR,DR},{FR,DX},{FX,DR},{FX,DX},{FR,DM},{FL,DR},{FL,DX},{FM,DM},{FL,DM},{EX,DR},{EX,DX},{EX,DM}    </td><td> FL,EX:[-32768,32767]{DM,FL}:[-2048,2047] </td><td> mem,lit,mem + mem,mem + lit     </td><td> Moves data from a register-1 to memory lco or memory loc -1 to a register or register-1 to register                                                                     </td></tr>
 <tr><td>IA0        </td><td> IADD  </td><td>(<b>I</b>nteger <b>Add</b>)                                 </td><td> 001000 </td><td> {FR,DM},{FM,DR},{FX,DM},{FM,DX},{FR,DM,DX},{FX,DM,DX},{FM,FX,DX},{FM,FX,DR},{FR,DR},{FR,DX},{FX,DR},{FX,DX},{FR,DM},{FL,DR},{FL,DX},{FM,DM},{FL,DM},{EX,DR},{EX,DX},{EX,DM}    </td><td> FL,EX:[-32768,32767]{DM,FL}:[-2048,2047] </td><td> mem,lit,mem + mem,mem + lit     </td><td> Adds memory loc and a register together or a register and a register                                                                                                    </td></tr>
