--- a/dox/developer_guide.dox
+++ b/dox/developer_guide.dox
@@ -122,7 +122,7 @@
     <th>Error Description</th>
   </tr>
   <tr>
-    <td>USI_*</th>
+    <td>USI_*, UIG_*</th>
     <td>We can not be sure at this point whether <em>all</em> instructions are accurately caching their evaluated values.
         Those which do not may cause a Null Pointer Exception.</td>
   </tr>
@@ -132,9 +132,24 @@
         This is not yet implemented in the program.</td>
   </tr>
   <tr>
-    <td>USI_*</th>
-    <td>The specification is unclear about the behavior of FM:1 vs FC:1 vs EX:1 vs FL:1, in way of AREC flags.
-        The assembler presently treats them as R,R,R,A, respectively. The correct flags may instead be R,R,A,A.</td>
+    <td>USI_*, UIG_*</th>
+    <td>The specification is unclear about the behavior of FM:1 vs EX:1 vs FC:1 vs FL:1, in way of AREC flags.
+        The assembler presently treats them as R,R,A,A, respectively. The correct flags may differ.</td>
+  </tr>
+  <tr>
+    <td>UIG_Arithmetic, UIG_ShiftManipulate</th>
+    <td>These classes do not support all of FM,EX,FC,FL. Depending on the allowed AREC flags of each operand keyword,
+       it may be necessary that they do.</td>
+  </tr>
+  <tr>
+    <td>USI_PSH, USI_PST</th>
+    <td>You can POP to DM or DR, but you can only push from FM, not FR, by the original URBAN specification. Which is stupid.
+        Similarly, PST lets you compare against anything but a register. Which is stupid.</td>
+  </tr>
+  <tr>
+    <td>USI_AEXS</th>
+    <td>The specification is unclear whether the constant to AEXS is relative to KICKO, or if it
+    must lie between KICKO FC and program end. No checking is done.</td>
   </tr>
 </table>
   
