upgraded PST in docs.. deleted the if != option..

--- a/dox/user_guide.dox
+++ b/dox/user_guide.dox
@@ -946,7 +946,7 @@ The following tables describe the various instructions with their formats and th
 <tr><td>IO3        </td><td> CRKB  </td><td>(<b>C</b>haracter <b>R</b>ead from <b>K</b>ey<b>b</b>oard)  </td><td> 101100 </td><td> {NW,DM},{NW,DM,DX}                                                                                                                                                             </td><td>                                          </td><td> input                           </td><td> inputs a character from keyboard to memory.                                                                                                                             </td></tr>
 <tr><td>S0         </td><td> PSH   </td><td>(<b>P</b>u<b>sh</b>)                                        </td><td> 110000 </td><td> {FC},{FL},{EX},{FM}                                                                                                                                                            </td><td> FL,FC,EX:[-4096,4095]                    </td><td> memory,literal                  </td><td> pushes the memory element onto the top of the stack                                                                                                                     </td></tr>
 <tr><td>S1         </td><td> POP   </td><td>(<b>Pop</b>)                                                </td><td> 110001 </td><td> {DR},{DM}                                                                                                                                                                      </td><td>                                          </td><td> memory,literal                  </td><td> pops the top stack element into memory or register.                                                                                                                     </td></tr>
-<tr><td>S2         </td><td> PST   </td><td>(<b>P</b>op and Te<b>st</b>)                                </td><td> 110010 </td><td> {FM,DR},{FM,FX,DR},{FL,DR},{EX,DR}                                                                                                                                             </td><td> FL,EX:[-4096,4095]                       </td><td> memory,literal                  </td><td> pops the top stack element, and compares the element with memory or literal: if = then load DR with 0; if != load DR with 1; if < load DR with 2; if > load DR with 3.  </td></tr>
+<tr><td>S2         </td><td> PST   </td><td>(<b>P</b>op and Te<b>st</b>)                                </td><td> 110010 </td><td> {FM,DR},{FM,FX,DR},{FL,DR},{EX,DR}                                                                                                                                             </td><td> FL,EX:[-4096,4095]                       </td><td> memory,literal                  </td><td> pops the top stack element, and compares the element with memory or literal: if = then load DR with 0; if < load DR with 2; if > load DR with 3.  </td></tr>
 <tr><td>C0         </td><td> NOP   </td><td>(<b>N</b>on-<b>op</b>erative)                               </td><td> 111101 </td><td> {}                                                                                                                                                                             </td><td>                                          </td><td> OP Only                         </td><td> no operation.                                                                                                                                                           </td></tr>
 <tr><td>C2         </td><td> HLT   </td><td>(<b>H</b>a<b>lt</b>)                                        </td><td> 111110 </td><td> {FC},{EX}                                                                                                                                                                      </td><td> FC:[-4096, 4095]                         </td><td> halt/dump                       </td><td> halts the program, and displays the constant to screen.                                                                                                                 </td></tr>
 <tr><td>C1         </td><td> DMP   </td><td>(<b>D</b>u<b>mp</b>)                                        </td><td> 111111 </td><td> {FC},{EX}                                                                                                                                                                      </td><td> FC:[1,3]                                 </td><td> halt/dump                       </td><td> displays register and memory contents to screen.  if fc = 1, then level 1 dump; if fc = 2, then level 2 dump; if fc = 3, then level 3 dump.                             </td></tr>
